Avoided cards to be squashed when window is small, and instead be cut at the sides

--- a/storymakers/src/app/globals.css
+++ b/storymakers/src/app/globals.css
@@ -80,6 +80,7 @@ body {
 .flip-card {
   background-color: transparent;
   width: 250px;
+  min-width: 250px;
   height: 250px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
   margin-right: 75px;
